# sugayutils

./: .gitignore  LICENSE.txt  README.org  pyproject.toml  setup.cfg
sugayutils/: __init__.py
sugayutils/bpass/: __init__.py  convert.py
sugayutils/core/: __init__.py  const.py  hello.py  line.py  literature.py  misc.py
sugayutils/core/functions/: modifiedblackbody.py
sugayutils/core/literature/: __init__.py  dust_attenuation.py  irxbeta.py
sugayutils/figure/: __init__.py  matplotlib.py
sugayutils/stat/: __init__.py  kde.py  weightedstats.py
sugayutils/test/stat/: test_weightedstats.py
test/core/: test_const.py
