[metadata]
name = sugayutils
version = attr: sugayutils._version.__version__
description = My utility package
license_files = LICENSE.txt
author = sugayu

[flake8]
max-line-length = 88
extend-ignore = E203

# [options]
# install_requires =
#     packageA
#     packageB

# [options.extras_require]
# develop =
#     dev_packageA
#     dev_packageB

# [options.entry_points]
# console_scripts =
#     foo = package_name.module_name:func_name
#     foo_dev = package_name.module_name:func_name [develop]
# gui_scripts =
#     bar = gui_package_name.gui_module_name:gui_func_name
